add features
- update config
- minimap overlay
- information panel overlay
- draw line from player to chest
- whitelist more objects/npcs